pre-deploy appearance